--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -95,7 +95,7 @@ stages:
     - task: CopyFiles@2
       displayName: Copy Files
       inputs:
-        SourceFolder: '$(system.defaultworkingdirectory)'
+        SourceFolder: '$(system.defaultworkingdirectory)/greencity-chart'
         Contents: '*'
         TargetFolder: '$(build.artifactstagingdirectory)/greencity-chart'
 
