--- a/az-cd-pipeline.yml
+++ b/az-cd-pipeline.yml
@@ -92,13 +92,6 @@ stages:
         Contents: '**/target/*.jar'
         TargetFolder: '$(build.artifactstagingdirectory)'
 
-    - task: CopyFiles@2
-      displayName: Copy Files
-      inputs:
-        SourceFolder: '$(system.defaultworkingdirectory)/greencity-chart'
-        Contents: '**'
-        TargetFolder: '$(build.artifactstagingdirectory)/greencity-chart'
-
     - task: PublishBuildArtifacts@1
       displayName: Publish Artifact
       inputs:
@@ -170,7 +163,7 @@ stages:
                 namespace: 'default'
                 command: 'upgrade'
                 chartType: 'FilePath'
-                chartPath: 'greencity-chart'
+                chartPath: 'drop/greencity-chart'
                 releaseName: 'greencity'
                 overrideValues: 'image=skyere/greencity:$(Build.BuildId)'
                 arguments: '--debug'
