Added some functionality for creating eco news from UI

--- a/core/pom.xml
+++ b/core/pom.xml
@@ -269,6 +269,12 @@
             <artifactId>jna</artifactId>
             <version>${net.java.dev.jna.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib</artifactId>
+            <version>1.7.0</version>
+            <scope>runtime</scope>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
