--- a/greencity-chart/templates/service-greencity.yaml
+++ b/greencity-chart/templates/service-greencity.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: greencity-service
 spec:
-  type: LoadBalancer
+  type: ClusterIP
   ports:
   - port: 80
     targetPort: 8080
