--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,9 @@
                  <configuration>
                     <excludes>
                         <exclude>**/config/*</exclude>
+                        <exclude>**/enums/*</exclude>
+                        <exclude>**/exception/exceptions/*</exclude>
+                        <exclude>**/entity/*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
