Added some functionality for creating eco news from UI (#4347)
* Added some functionality for creating eco news from UI

--- a/pom.xml
+++ b/pom.xml
@@ -51,6 +51,9 @@
                  <configuration>
                     <excludes>
                         <exclude>**/config/*</exclude>
+                        <exclude>**/enums/*</exclude>
+                        <exclude>**/exceptions/*</exclude>
+                        <exclude>**/entity/*</exclude>
                     </excludes>
                 </configuration>
                 <executions>
