--- a/greencity-chart/templates/ExternalSecret.yaml
+++ b/greencity-chart/templates/ExternalSecret.yaml
@@ -19,6 +19,10 @@ spec:
     remoteRef:
       key: AZURE-CONTAINER-NAME
 
+  - secretKey: APPLICATIONINSIGHTS-CONNECTION-STRING
+    remoteRef:
+      key: APPLICATIONINSIGHTS-CONNECTION-STRING
+
   - secretKey: GREENCITYUSER-SERVER-ADDRESS
     remoteRef:
       key: GREENCITYUSER-SERVER-ADDRESS
