--- a/greencity-chart/templates/ingress-greencity.yaml
+++ b/greencity-chart/templates/ingress-greencity.yaml
@@ -6,7 +6,7 @@ metadata:
     kubernetes.io/ingress.class: nginx
     cert-manager.io/issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/enable-cors: "true"
-    nginx.ingress.kubernetes.io/cors-allow-origin: "https://ita-social-projects.github.io.ga, https://ita-social-projects.github.io.ga/, https://ita-social-projects.github.io/* "
+    nginx.ingress.kubernetes.io/cors-allow-origin: "https://ita-social-projects.github.io/GreenCityClient/, http://localhost:4200, http://localhost:4200/*"
     nginx.ingress.kubernetes.io/cors-allow-credentials: "true"
 spec:
   tls:
