made helm chart more flaxible

--- a/greencity-chart/templates/ExternalSecret.yaml
+++ b/greencity-chart/templates/ExternalSecret.yaml
@@ -3,7 +3,7 @@ kind: ExternalSecret
 metadata:
   name: external-secret
 spec:
-  refreshInterval: 24h
+  refreshInterval: 7d
   secretStoreRef:
     kind: SecretStore
     name: secret-store
