--- a/greencity-chart/templates/service-greencity.yaml
+++ b/greencity-chart/templates/service-greencity.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: greencity-service
+  name: {{ .Release.Name }}-greencity-service
 spec:
   type: ClusterIP
   ports:
   - port: 80
     targetPort: 8080
   selector:
-    app: greencity
+    app: {{ .Release.Name }}-greencity
