set new refresh time for secret

--- a/greencity-chart/templates/ExternalSecret.yaml
+++ b/greencity-chart/templates/ExternalSecret.yaml
@@ -3,7 +3,7 @@ kind: ExternalSecret
 metadata:
   name: external-secret
 spec:
-  refreshInterval: 7d
+  refreshInterval: 168h
   secretStoreRef:
     kind: SecretStore
     name: secret-store
