--- a/greencity-chart/templates/greencity.yaml
+++ b/greencity-chart/templates/greencity.yaml
@@ -7,6 +7,7 @@ metadata:
 
 spec:
   replicas: {{ .Values.deployment.replicas }}
+  revisionHistoryLimit: 1
   selector:
     matchLabels:
       app: {{ .Release.Name }}-greencity
