--- a/greencity-chart/templates/ingress-greencity.yaml
+++ b/greencity-chart/templates/ingress-greencity.yaml
@@ -4,7 +4,7 @@ metadata:
   name: {{ .Release.Name }}-greencity-ingress
   annotations:
     kubernetes.io/ingress.class: nginx
-    cert-manager.io/issuer: "letsencrypt-prod"
+    cert-manager.io/cluster-issuer: "letsencrypt-prod"
     nginx.ingress.kubernetes.io/proxy-body-size: 150m
 {{- if .Values.ingress.enable_cors}}
     nginx.ingress.kubernetes.io/enable-cors: "true"
@@ -21,7 +21,7 @@ spec:
   tls:
   - hosts:
     - {{ .Values.ingress.hostname }}
-    secretName: greencity
+    secretName: {{ .Release.Name }}-greencity
   rules:
   - host: {{ .Values.ingress.hostname }}
     http:
