--- a/greencity-chart/templates/service-greencity.yaml
+++ b/greencity-chart/templates/service-greencity.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ .Release.Name }}-greencity-service
 spec:
-  type: ClusterIP
+  type: {{ .Values.service.type }}
   ports:
   - port: 80
     targetPort: 8080
