--- a/greencity-chart/templates/ClusterExternalSecret.yaml
+++ b/greencity-chart/templates/ClusterExternalSecret.yaml
@@ -30,6 +30,10 @@ spec:
       remoteRef:
         key: AZURE-CONTAINER-NAME
 
+    - secretKey: APPLICATIONINSIGHTS-CONNECTION-STRING
+      remoteRef:
+        key: APPLICATIONINSIGHTS-CONNECTION-STRING
+
     - secretKey: GREENCITYUSER-SERVER-ADDRESS
       remoteRef:
         key: GREENCITYUSER-SERVER-ADDRESS
@@ -258,7 +262,24 @@ spec:
       remoteRef:
         key: AZURE-CONTAINER
 
-    - secretKey: AZURE-CONNECTION
+    - secretKey: AZURE-CONNECTION 
       remoteRef:
         key: AZURE-CONNECTION
+
+    - secretKey: LIQPAY-REDIRECT
+      remoteRef:
+        key: LIQPAY-REDIRECT
+
+    - secretKey: FONDY-PERSONAL-CABINET
+      remoteRef:
+        key: FONDY-PERSONAL-CABINET
+
+    - secretKey: FONDY-REDIRECT
+      remoteRef:
+        key: FONDY-REDIRECT
+
+    - secretKey: GOOGLE-API-KEY
+      remoteRef:
+        key: GOOGLE-API-KEY
+
 {{- end }}
