--- a/greencity-chart/templates/ClusterExternalSecret.yaml
+++ b/greencity-chart/templates/ClusterExternalSecret.yaml
@@ -174,6 +174,14 @@ spec:
       remoteRef:
         key: JAWSDB-URL-UBS
 
+    - secretKey: JAWSDB-URL-TEST
+      remoteRef:
+        key: JAWSDB-URL-TEST
+
+    - secretKey: JAWSDB-URL-UBS-TEST
+      remoteRef:
+        key: JAWSDB-URL-UBS-TEST
+
     - secretKey: AZURE-CONNECTION-STRING
       remoteRef:
         key: AZURE-CONNECTION-STRING
