--- a/greencity-chart/templates/greencity.yaml
+++ b/greencity-chart/templates/greencity.yaml
@@ -154,7 +154,7 @@ spec:
           valueFrom:
             secretKeyRef:
               name: {{ .Values.externalSecret.secretName }}
-              key: JAWSDB-URL
+              key: {{ if eq .Values.environment "prod" }}JAWSDB-URL{{ else }}JAWSDB-URL-TEST{{ end }}
 
         - name: JDBC_LOB
           valueFrom:
