added data migration for new user password encoder, new sql data insert

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -51,6 +51,7 @@ greencity.time.after.last.activity=300000
 
 #Thymeleaf
 spring.thymeleaf.cache=false
+spring.liquibase.contexts=dev
 
 #RestTemplate
 greencityuser.server.address = http://localhost:8060
