--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -7,5 +7,5 @@ server.tomcat.max-http-post-size=100MB
 
 # Email for service-to-service communication with GreenCityUser
 spring.liquibase.parameters.service-email=service@greencity.ua
-
+spring.liquibase.contexts=global
 greencity.authorization.googleApiKey=${GOOGLE_API_KEY:default-key}
