--- a/core/pom.xml
+++ b/core/pom.xml
@@ -275,6 +275,10 @@
             <version>1.7.0</version>
             <scope>runtime</scope>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.datatype</groupId>
+            <artifactId>jackson-datatype-jsr310</artifactId>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
