--- a/greencity-chart/templates/ClusterSecretStore.yaml
+++ b/greencity-chart/templates/ClusterSecretStore.yaml
@@ -6,8 +6,8 @@ metadata:
 spec:
   provider:
     azurekv:
-      tenantId: "6c51c659-9d52-41af-81f7-dde16380e813"
-      vaultUrl: "https://greencity-app.vault.azure.net"
+      tenantId: {{ .Values.externalSecret.tenantId }}
+      vaultUrl: {{ .Values.externalSecret.vaultUrl }}
 
 
       authSecretRef:
