--- a/greencity-chart/templates/ClusterExternalSecret.yaml
+++ b/greencity-chart/templates/ClusterExternalSecret.yaml
@@ -11,10 +11,10 @@ spec:
       Dev: test
 
 
-  refreshTime: "15m"
+  refreshTime: "1m"
 
   externalSecretSpec:
-    refreshInterval: "168h"
+    refreshInterval: "0"
 
     secretStoreRef:
       name: cluster-secret-store
