disable kubernetes tests

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -34,10 +34,10 @@ jobs:
         with:
           java-version: 11
       
-      - name: Set up Go
-        uses: actions/setup-go@v3
-        with:
-          go-version: 1.18
+#       - name: Set up Go
+#         uses: actions/setup-go@v3
+#         with:
+#           go-version: 1.18
 
       - name: Run a multi-line script
         env:
@@ -75,22 +75,22 @@ jobs:
           push: true
           tags: ${{ env.dockerRepoName }}:test-${{ env.GITHUB_SHA_SHORT }}
 
-      - name: Kubernetes Set Context
-        uses: Azure/k8s-set-context@v3.0
-        with:
-          kubeconfig: ${{ secrets.KUBE_CONFIG }}
+#       - name: Kubernetes Set Context
+#         uses: Azure/k8s-set-context@v3.0
+#         with:
+#           kubeconfig: ${{ secrets.KUBE_CONFIG }}
       
-      - name: Set up Postgres
-        run: kubectl scale deploy postgres --replicas=1 -n test
+#       - name: Set up Postgres
+#         run: kubectl scale deploy postgres --replicas=1 -n test
       
-      - name: Kubernetes tests
-        run: |
-          cd chart-test
-          go test -v ./...
+#       - name: Kubernetes tests
+#         run: |
+#           cd chart-test
+#           go test -v ./...
       
-      - name: Post Set up Postgres
-        if: success() || failure()
-        run: kubectl scale deploy postgres --replicas=0 -n test
+#       - name: Post Set up Postgres
+#         if: success() || failure()
+#         run: kubectl scale deploy postgres --replicas=0 -n test
 
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Deploy 🚀
