this one is usable:eyes:

--- a/greencity-chart/templates/ClusterExternalSecret.yaml
+++ b/greencity-chart/templates/ClusterExternalSecret.yaml
@@ -238,6 +238,10 @@ spec:
       remoteRef:
         key: EMAIL-TOPIC
 
+     - secretKey: VERIFY-EMAIL
+      remoteRef:
+        key: VERIFY-EMAIL
+
     - secretKey: SENDER-EMAIL-ADDRESS
       remoteRef:
         key: SENDER-EMAIL-ADDRESS
