add GREENCITY-UBS-SERVER-ADDRESS variable

--- a/greencity-chart/templates/ClusterExternalSecret.yaml
+++ b/greencity-chart/templates/ClusterExternalSecret.yaml
@@ -33,6 +33,10 @@ spec:
     - secretKey: GREENCITYUSER-SERVER-ADDRESS
       remoteRef:
         key: GREENCITYUSER-SERVER-ADDRESS
+        
+    - secretKey: GREENCITY-UBS-SERVER-ADDRESS
+      remoteRef:
+        key: GREENCITY-UBS-SERVER-ADDRESS
 
     - secretKey: FACEBOOK-APP-SECRET
       remoteRef:
