Add new variable

--- a/greencity-chart/templates/ClusterExternalSecret.yaml
+++ b/greencity-chart/templates/ClusterExternalSecret.yaml
@@ -269,5 +269,9 @@ spec:
     - secretKey: GOOGLE-API-KEY
       remoteRef:
         key: GOOGLE-API-KEY
+    
+    - secretKey: DOMAIN-NAME
+      remoteRef:
+        key: DOMAIN-NAME
 
 {{- end }}
