--- a/service/pom.xml
+++ b/service/pom.xml
@@ -147,6 +147,11 @@
             <artifactId>httpclient</artifactId>
             <version>${apache.http.client.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.locationtech.jts</groupId>
+            <artifactId>jts-core</artifactId>
+            <version>1.19.0</version>
+        </dependency>
     </dependencies>
 
 </project>
