Commit with change in FilterEventDto,EventServiceImpl,ModelUtils,added dependency

--- a/service/pom.xml
+++ b/service/pom.xml
@@ -152,6 +152,11 @@
             <artifactId>jts-core</artifactId>
             <version>1.19.0</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-collections4</artifactId>
+            <version>4.1</version>
+        </dependency>
     </dependencies>
 
 </project>
