upd test properties

--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -13,5 +13,19 @@ accessTokenValidTimeInMinutes=120
 refreshTokenValidTimeInMinutes=600
 verifyEmailTimeHour=24
 
+# Datasource
+spring.datasource.url=${DATASOURCE_URL}
+spring.datasource.username=${DATASOURCE_USER}
+spring.datasource.password=${DATASOURCE_PASSWORD}
+spring.datasource.driver-class-name=org.postgresql.Driver
+server.port=8080
+
+# Liquibase
+spring.liquibase.url=${DATASOURCE_URL}
+spring.liquibase.user=${DATASOURCE_USER}
+spring.liquibase.password=${DATASOURCE_PASSWORD}
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
 
 
