--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -7,25 +7,11 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #RestTemplate
 greencityuser.server.address=http://localhost:8080
 
+# Email for service-to-service communication with GreenCityUser
+spring.liquibase.parameters.service-email=test@greencity.ua
+
 # Token expiration time
 tokenKey=1
 accessTokenValidTimeInMinutes=120
 refreshTokenValidTimeInMinutes=600
 verifyEmailTimeHour=24
-
-# Datasource
-spring.datasource.url=${DATASOURCE_URL}
-spring.datasource.username=${DATASOURCE_USER}
-spring.datasource.password=${DATASOURCE_PASSWORD}
-spring.datasource.driver-class-name=org.postgresql.Driver
-server.port=8080
-
-# Liquibase
-spring.liquibase.url=${DATASOURCE_URL}
-spring.liquibase.user=${DATASOURCE_USER}
-spring.liquibase.password=${DATASOURCE_PASSWORD}
-spring.liquibase.enabled=true
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-
-
-
