--- a/core/src/main/resources/application-test.properties
+++ b/core/src/main/resources/application-test.properties
@@ -7,11 +7,11 @@ spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 #RestTemplate
 greencityuser.server.address=http://localhost:8080
 
+# Email for service-to-service communication with GreenCityUser
+spring.liquibase.parameters.service-email=test@greencity.ua
+
 # Token expiration time
 tokenKey=1
 accessTokenValidTimeInMinutes=120
 refreshTokenValidTimeInMinutes=600
 verifyEmailTimeHour=24
-
-
-
