--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -10,3 +10,8 @@ max-http-form-post-size=100MB
 spring.liquibase.parameters.service-email=service@greencity.ua
 
 greencity.authorization.googleApiKey=${GOOGLE_API_KEY:default-key}
+
+# Swagger configuration
+springdoc.paths-to-match=/
+springdoc.paths-to-exclude=/management/**
+springdoc.packages-to-scan=greencity.controller
