--- a/pom.xml
+++ b/pom.xml
@@ -36,68 +36,29 @@
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
         <sonar.exclusions>**/config/*</sonar.exclusions>
-        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
+        <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml
+        </sonar.coverage.jacoco.xmlReportPaths>
         <sonar.language>java</sonar.language>
         <test.containers.version>1.19.1</test.containers.version>
         <maven.surefire.plugin.version>3.2.2</maven.surefire.plugin.version>
         <net.java.dev.jna.version>5.13.0</net.java.dev.jna.version>
     </properties>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <optional>true</optional>
+        </dependency>
+    </dependencies>
+
     <build>
         <plugins>
-            <plugin>
-                <groupId>org.openrewrite.maven</groupId>
-                <artifactId>rewrite-maven-plugin</artifactId>
-                <version>5.12.0</version>
-                <configuration>
-                    <activeRecipes>
-                        <recipe>org.openrewrite.java.migrate.UpgradeToJava21</recipe>
-                        <recipe>org.openrewrite.hibernate.MigrateToHibernate62</recipe>
-                        <recipe>org.openrewrite.java.migrate.lang.StringFormatted</recipe>
-                        <recipe>org.openrewrite.github.SetupJavaUpgradeJavaVersion</recipe>
-                        <recipe>org.openrewrite.java.migrate.lang.UseTextBlocks</recipe>
-                        <recipe>org.openrewrite.java.spring.boot3.RemoveEnableBatchProcessing</recipe>
-                        <recipe>org.openrewrite.java.migrate.jakarta.JavaxMigrationToJakarta</recipe>
-                        <recipe>org.openrewrite.java.spring.boot3.RemoveConstructorBindingAnnotation</recipe>
-                        <recipe>org.openrewrite.java.spring.boot2.MoveAutoConfigurationToImportsFile</recipe>
-                        <recipe>org.openrewrite.java.spring.boot3.ActuatorEndpointSanitization</recipe>
-                        <recipe>org.openrewrite.java.spring.boot3.MigrateMaxHttpHeaderSize</recipe>
-                        <recipe>org.openrewrite.java.spring.boot3.DowngradeServletApiWhenUsingJetty</recipe>
-                        <recipe>org.openrewrite.java.spring.boot3.ConfigurationOverEnableSecurity</recipe>
-                        <recipe>org.openrewrite.java.spring.boot3.SpringBootProperties_3_1</recipe>
-                        <recipe>org.openrewrite.java.spring.boot3.MigrateThymeleafDependencies</recipe>
-                        <recipe>org.openrewrite.java.spring.security6.UpgradeSpringSecurity_6_1</recipe>
-                    </activeRecipes>
-                </configuration>
-                <dependencies>
-                    <dependency>
-                        <groupId>org.openrewrite.recipe</groupId>
-                        <artifactId>rewrite-migrate-java</artifactId>
-                        <version>2.3.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.openrewrite.recipe</groupId>
-                        <artifactId>rewrite-spring</artifactId>
-                        <version>5.1.1</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.openrewrite.recipe</groupId>
-                        <artifactId>rewrite-hibernate</artifactId>
-                        <version>1.0.7</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>org.openrewrite.recipe</groupId>
-                        <artifactId>rewrite-static-analysis</artifactId>
-                        <version>1.1.0</version>
-                        <scope>runtime</scope>
-                    </dependency>
-                </dependencies>
-            </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
                 <version>0.8.11</version>
-                 <configuration>
+                <configuration>
                     <excludes>
                         <exclude>**/config/*</exclude>
                         <exclude>**/enums/*</exclude>
