--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -44,6 +44,7 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
+            <version>6.1.0</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
@@ -58,6 +59,7 @@
         <dependency>
             <groupId>org.apache.tomcat.embed</groupId>
             <artifactId>tomcat-embed-core</artifactId>
+            <version>11.0.0-M15</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
