--- a/core/pom.xml
+++ b/core/pom.xml
@@ -160,8 +160,8 @@
         </dependency>
         <dependency>
             <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client</artifactId>
-            <version>2.2.0</version>
+            <artifactId>google-api-client-java6</artifactId>
+            <version>2.1.4</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -300,7 +300,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.1.5</version>
+                <version>3.2.1</version>
             </plugin>
         </plugins>
     </build>
