--- a/core/pom.xml
+++ b/core/pom.xml
@@ -24,7 +24,7 @@
         <tngtech.version>1.13.1</tngtech.version>
         <facebook.version>2.0.3.RELEASE</facebook.version>
         <socialcore.version>1.1.6.RELEASE</socialcore.version>
-        <apache.commons.version>3.13.0</apache.commons.version>
+        <apache.commons.version>3.14.0</apache.commons.version>
     </properties>
 
     <dependencies>
@@ -160,8 +160,8 @@
         </dependency>
         <dependency>
             <groupId>com.google.api-client</groupId>
-            <artifactId>google-api-client-java6</artifactId>
-            <version>2.1.4</version>
+            <artifactId>google-api-client</artifactId>
+            <version>2.2.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
@@ -261,11 +261,6 @@
             <artifactId>kotlin-stdlib</artifactId>
             <version>1.9.20</version>
             <scope>runtime</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.yaml</groupId>
-            <artifactId>snakeyaml</artifactId>
-            <version>2.2</version>
         </dependency>
     </dependencies>
     <build>
