--- a/service/pom.xml
+++ b/service/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-inline</artifactId>
-            <version>${mockito-core.version}</version>
+            <version>5.2.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
