--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,6 +15,8 @@
     <name>core</name>
 
     <properties>
+        <mockito-junit-jupiter.version>5.6.0</mockito-junit-jupiter.version>
+        <mockito-core.version>5.6.0</mockito-core.version>
         <caffeine.version>3.1.8</caffeine.version>
         <liquibase.version>4.25.0</liquibase.version>
         <jackson.version>2.16.0-rc1</jackson.version>
