--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -14,6 +14,7 @@
     <version>1.0-SNAPSHOT</version>
     <name>dao</name>
     <properties>
+        <mockito-junit-jupiter.version>5.6.0</mockito-junit-jupiter.version>
         <junit-jupiter.version>5.10.1</junit-jupiter.version>
         <liquibase.version>4.25.0</liquibase.version>
         <postgresql.version>42.6.0</postgresql.version>
@@ -97,6 +98,7 @@
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-junit-jupiter.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
