--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -15,6 +15,8 @@
     <name>service-api</name>
     <properties>
         <swagger.version>3.0.0</swagger.version>
+        <mockito-junit-jupiter.version>5.6.0</mockito-junit-jupiter.version>
+        <mockito-core.version>5.6.0</mockito-core.version>
     </properties>
 
     <dependencies>
