--- a/service/pom.xml
+++ b/service/pom.xml
@@ -15,6 +15,8 @@
     <name>service</name>
 
     <properties>
+        <mockito-junit-jupiter.version>5.6.0</mockito-junit-jupiter.version>
+        <mockito-core.version>5.6.0</mockito-core.version>
         <apache.commons.version>3.10</apache.commons.version>
         <commons-io.version>2.15.0</commons-io.version>
         <org.springframework.social.version>2.0.3.RELEASE</org.springframework.social.version>
