--- a/pom.xml
+++ b/pom.xml
@@ -24,8 +24,8 @@
     </modules>
 
     <properties>
-        <junit-jupiter.version>5.10.1</junit-jupiter.version>
         <modelmapper.version>3.0.0</modelmapper.version>
+        <mockito-core.version>3.4.0</mockito-core.version>
         <java.version>21</java.version>
         <maven.compiler.source>21</maven.compiler.source>
         <maven.compiler.target>21</maven.compiler.target>
@@ -37,7 +37,7 @@
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml
         </sonar.coverage.jacoco.xmlReportPaths>
         <sonar.language>java</sonar.language>
-        <test.containers.version>1.19.1</test.containers.version>
+        <test.containers.version>1.19.3</test.containers.version>
         <maven.surefire.plugin.version>3.2.2</maven.surefire.plugin.version>
         <net.java.dev.jna.version>5.13.0</net.java.dev.jna.version>
     </properties>
