--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -74,5 +74,17 @@
                 <version>6.0.0</version>
                 <scope>provided</scope>
             </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
         </dependencies>
 </project>
