--- a/service/pom.xml
+++ b/service/pom.xml
@@ -19,7 +19,6 @@
         <commons-io.version>2.15.0</commons-io.version>
         <org.springframework.social.version>2.0.3.RELEASE</org.springframework.social.version>
         <google.maps.version>2.2.0</google.maps.version>
-        <slf4.version>1.7.25</slf4.version>
         <apache.http.client.version>5.3-alpha1</apache.http.client.version>
     </properties>
 
@@ -106,6 +105,24 @@
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-collections4</artifactId>
             <version>4.4</version>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-core</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-inline</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.mockito</groupId>
+            <artifactId>mockito-junit-jupiter</artifactId>
+            <version>${mockito-core.version}</version>
+            <scope>test</scope>
         </dependency>
     </dependencies>
 </project>
