Commit with main.yml

--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,8 @@
         <spring-security.version>6.1.5</spring-security.version>
         <sonar.java.coveragePlugin>jacoco</sonar.java.coveragePlugin>
         <sonar.dynamicAnalysis>reuseReports</sonar.dynamicAnalysis>
-        <sonar.coverage.exclusions>**/config/*</sonar.coverage.exclusions>
-        <sonar.coverage.exclusions>**/CustomExceptionHandler.java</sonar.coverage.exclusions>
-        <sonar.coverage.exclusions>**/entity/*</sonar.coverage.exclusions>
+        <sonar.coverage.exclusions>**/config/*,**/entity/*,**/exceptions/*</sonar.coverage.exclusions>
         <sonar.exclusions>**/config/*</sonar.exclusions>
-        <sonar.exclusions>**/entity/*</sonar.exclusions>
         <sonar.coverage.jacoco.xmlReportPaths>${project.basedir}/target/site/jacoco/jacoco.xml
         </sonar.coverage.jacoco.xmlReportPaths>
         <sonar.language>java</sonar.language>
@@ -51,7 +48,7 @@
             <plugin>
                 <groupId>org.jacoco</groupId>
                 <artifactId>jacoco-maven-plugin</artifactId>
-                <version>0.8.6</version>
+                <version>0.8.11</version>
                 <configuration>
                     <excludes>
                         <exclude>**/config/*</exclude>
