changed sonar property

--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,7 @@
         <test.containers.version>1.15.1</test.containers.version>
         <maven.surefire.plugin.version>2.22.2</maven.surefire.plugin.version>
         <net.java.dev.jna.version>4.5.2</net.java.dev.jna.version>
+        <sonar.scanner.force-deprecated-java-version>true</sonar.scanner.force-deprecated-java-version>
     </properties>
 
     <profiles>
