--- a/service-api/pom.xml
+++ b/service-api/pom.xml
@@ -14,6 +14,7 @@
     <version>1.0-SNAPSHOT</version>
     <name>service-api</name>
     <properties>
+        <jjwt.version>0.12.3</jjwt.version>
         <swagger.version>3.0.0</swagger.version>
     </properties>
 
@@ -52,9 +53,21 @@
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt</artifactId>
-                <version>0.9.1</version>
+                <version>${jjwt.version}</version>
                 <scope>compile</scope>
             </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-impl</artifactId>
+            <version>${jjwt.version}</version>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>io.jsonwebtoken</groupId>
+            <artifactId>jjwt-orgjson</artifactId>
+            <version>${jjwt.version}</version>
+            <scope>runtime</scope>
+        </dependency>
             <dependency>
                 <groupId>org.apache.tomcat.embed</groupId>
                 <artifactId>tomcat-embed-core</artifactId>
