Eng text for notification

--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -1,3 +1,4 @@
+USERS=users
 
 FRIEND_REQUEST_RECEIVED_TITLE=You have received a friend request
 FRIEND_REQUEST_RECEIVED={userId} sent you a friend request.
