--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -23,9 +23,9 @@ ECONEWS_COMMENT=Your news {message} received a comment from {user}.
 
 EVENT_CREATED_TITLE=You have created event
 EVENT_CREATED=You successfully created event {message}.
-EVENT_CANCELED_TITLE=Event you have joined was canceled
+EVENT_CANCELED_TITLE=Event was canceled
 EVENT_CANCELED=Event {message} was canceled.
-EVENT_UPDATED_TITLE=Event you have joined was updated
+EVENT_UPDATED_TITLE=Event was updated
 EVENT_UPDATED=Event {message} was updated.
 EVENT_JOINED_TITLE=New people joined your event
 EVENT_JOINED={user} joined your event.
