Commit with with dependencies fixed issues

--- a/core/src/main/resources/application.properties
+++ b/core/src/main/resources/application.properties
@@ -15,3 +15,4 @@ greencity.authorization.googleApiKey=${GOOGLE_API_KEY:default-key}
 springdoc.paths-to-match=/**
 springdoc.paths-to-exclude=/management/**
 springdoc.packages-to-scan=greencity.controller
+springdoc.swagger-ui.doc-expansion=none
