--- a/core/pom.xml
+++ b/core/pom.xml
@@ -15,17 +15,23 @@
     <name>core</name>
 
     <properties>
-        <caffeine.version>3.1.8</caffeine.version>
-        <liquibase.version>4.25.0</liquibase.version>
-        <jackson.version>2.16.0-rc1</jackson.version>
         <powermock.version>2.0.9</powermock.version>
         <swagger.version>3.0.0</swagger.version>
-        <cloudstorage.version>2.29.1</cloudstorage.version>
         <tngtech.version>1.13.1</tngtech.version>
         <facebook.version>2.0.3.RELEASE</facebook.version>
         <socialcore.version>1.1.6.RELEASE</socialcore.version>
-        <apache.commons.version>3.14.0</apache.commons.version>
-        <jjwt.version>0.12.3</jjwt.version>
+        <lombok.version>1.18.30</lombok.version>
+        <commons.io.version>2.15.0</commons.io.version>
+        <springdoc.version>2.3.0</springdoc.version>
+        <thymeleaf.spring6.version>3.1.2.RELEASE</thymeleaf.spring6.version>
+        <thymeleaf.extras.version>3.0.4.RELEASE</thymeleaf.extras.version>
+        <apache.poi.version>5.2.5</apache.poi.version>
+        <kotlin.stdlib.version>1.9.20</kotlin.stdlib.version>
+        <azure.webapp.maven.plugin.version>2.12.0</azure.webapp.maven.plugin.version>
+        <google.cloud.storage.version>2.29.1</google.cloud.storage.version>
+        <test.containers.version>1.19.3</test.containers.version>
+        <net.java.dev.jna.version>5.13.0</net.java.dev.jna.version>
+        <apache.commons.version>3.13.0</apache.commons.version>
     </properties>
 
     <dependencies>
@@ -48,10 +54,10 @@
             <scope>runtime</scope>
         </dependency>
         <dependency>
-        <groupId>org.apache.commons</groupId>
-        <artifactId>commons-dbcp2</artifactId>
-        <version>2.11.0</version>
-    </dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-dbcp2</artifactId>
+            <version>${commons.dbcp2.version}</version>
+        </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
@@ -65,7 +71,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -83,22 +89,22 @@
             <groupId>org.postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <scope>runtime</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.checkerframework</groupId>
+                    <artifactId>checker-qual</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.jayway.jsonpath</groupId>
-                    <artifactId>json-path</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>commons-io</groupId>
             <artifactId>commons-io</artifactId>
-            <version>2.15.0</version>
+            <version>${commons.io.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.security</groupId>
@@ -113,12 +119,18 @@
         <dependency>
             <groupId>org.springdoc</groupId>
             <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
-            <version>2.3.0</version>
+            <version>${springdoc.version}</version>
         </dependency>
         <dependency>
             <groupId>org.powermock</groupId>
             <artifactId>powermock-api-mockito2</artifactId>
             <version>${powermock.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.objenesis</groupId>
+                    <artifactId>objenesis</artifactId>
+                </exclusion>
+            </exclusions>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -152,7 +164,17 @@
         <dependency>
             <groupId>com.google.cloud</groupId>
             <artifactId>google-cloud-storage</artifactId>
-            <version>${cloudstorage.version}</version>
+            <version>${google.cloud.storage.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.checkerframework</groupId>
+                    <artifactId>checker-qual</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>com.google.errorprone</groupId>
+                    <artifactId>error_prone_annotations</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.social</groupId>
@@ -163,6 +185,12 @@
             <groupId>org.springframework.social</groupId>
             <artifactId>spring-social-facebook</artifactId>
             <version>${facebook.version}</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.springframework.social</groupId>
+                    <artifactId>spring-social-core</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
@@ -171,12 +199,12 @@
         <dependency>
             <groupId>org.thymeleaf</groupId>
             <artifactId>thymeleaf-spring6</artifactId>
-            <version>3.1.2.RELEASE</version>
+            <version>${thymeleaf.spring6.version}</version>
         </dependency>
         <dependency>
             <groupId>org.thymeleaf.extras</groupId>
             <artifactId>thymeleaf-extras-java8time</artifactId>
-            <version>3.0.4.RELEASE</version>
+            <version>${thymeleaf.extras.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.commons</groupId>
@@ -186,18 +214,28 @@
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi</artifactId>
-            <version>5.2.4</version>
+            <version>${apache.poi.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>5.2.4</version>
+            <version>${apache.poi.version}</version>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>postgresql</artifactId>
             <version>${test.containers.version}</version>
             <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.jetbrains</groupId>
+                    <artifactId>annotations</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.apache.commons</groupId>
+                    <artifactId>commons-compress</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
         <dependency>
             <groupId>org.hibernate.orm</groupId>
@@ -208,19 +246,13 @@
             <artifactId>jna</artifactId>
             <version>${net.java.dev.jna.version}</version>
         </dependency>
-        <dependency>
-            <groupId>org.jetbrains.kotlin</groupId>
-            <artifactId>kotlin-stdlib</artifactId>
-            <version>1.9.20</version>
-            <scope>runtime</scope>
-        </dependency>
     </dependencies>
     <build>
         <plugins>
             <plugin>
                 <groupId>com.microsoft.azure</groupId>
                 <artifactId>azure-webapp-maven-plugin</artifactId>
-                <version>2.12.0</version>
+                <version>${azure.webapp.maven.plugin.version}</version>
                 <configuration>
                     <schemaVersion>V2</schemaVersion>
                     <resourceGroup>GreenCity</resourceGroup>
@@ -247,7 +279,7 @@
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
-                <version>3.2.1</version>
+                <version>${spring.boot.version}</version>
             </plugin>
         </plugins>
     </build>
