--- a/dao/pom.xml
+++ b/dao/pom.xml
@@ -15,9 +15,10 @@
     <name>dao</name>
     <properties>
         <junit-jupiter.version>5.10.1</junit-jupiter.version>
-        <liquibase.version>4.25.0</liquibase.version>
         <postgresql.version>42.6.0</postgresql.version>
         <testcontainers.version>1.19.1</testcontainers.version>
+        <h2.version>2.2.224</h2.version>
+        <hibernate.jpamodelgen.version>6.4.1.Final</hibernate.jpamodelgen.version>
     </properties>
 
     <dependencies>
@@ -34,7 +35,7 @@
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.30</version>
+            <version>${lombok.version}</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -50,32 +51,20 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-engine</artifactId>
-            <version>${junit-jupiter.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-test</artifactId>
             <scope>test</scope>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.jayway.jsonpath</groupId>
-                    <artifactId>json-path</artifactId>
-                </exclusion>
-            </exclusions>
         </dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
-            <version>2.2.224</version>
+            <version>${h2.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.hibernate.orm</groupId>
             <artifactId>hibernate-jpamodelgen</artifactId>
-            <version>6.4.1.Final</version>
+            <version>${hibernate.jpamodelgen.version}</version>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
@@ -92,12 +81,12 @@
         <dependency>
             <groupId>org.apache.commons</groupId>
             <artifactId>commons-dbcp2</artifactId>
-            <version>2.11.0</version>
+            <version>${commons.dbcp2.version}</version>
         </dependency>
         <dependency>
             <groupId>jakarta.servlet</groupId>
             <artifactId>jakarta.servlet-api</artifactId>
-            <version>6.0.0</version>
+            <version>${jakarta.servlet.api.version}</version>
             <scope>provided</scope>
         </dependency>
     </dependencies>
