Additional text for notifications

--- a/service/src/main/resources/notification.properties
+++ b/service/src/main/resources/notification.properties
@@ -1,13 +1,13 @@
 USERS=users
 
 ECONEWS_COMMENT_LIKE_TITLE=You received a like.
-ECONEWS_COMMENT_LIKE=Your comment {message} received a like from {user}.
+ECONEWS_COMMENT_LIKE={user} liked your comment {message} to EcoNews {secondMessage}.
 ECONEWS_COMMENT_REPLY_TITLE=You received a comment reply
-ECONEWS_COMMENT_REPLY={user} replied to your comment on the {message} {title}.
+ECONEWS_COMMENT_REPLY={user} commented your comment {message} to EcoNews {secondMessage}.
 EVENT_COMMENT_LIKE_TITLE=You received a like.
-EVENT_COMMENT_LIKE={user} likes your comment to {message} {title}.
+EVENT_COMMENT_LIKE={user} liked your comment {message} to event {secondMessage}.
 EVENT_COMMENT_REPLY_TITLE=You received a comment reply
-EVENT_COMMENT_REPLY={user} replied to your comment on the {message} {title}.
+EVENT_COMMENT_REPLY={user} commented your comment {message} to event {secondMessage}.
 
 ECONEWS_COMMENT_TITLE=Your received a comment
 ECONEWS_COMMENT={user} commented on your news {message}.
@@ -25,7 +25,7 @@ EVENT_CREATED=You successfully created event {message}.
 EVENT_JOINED_TITLE=New people joined your event
 EVENT_JOINED={user} joined your event {message}.
 EVENT_NAME_UPDATED_TITLE=Event was updated
-EVENT_NAME_UPDATED=Event {message} was updated. New name is {title}.
+EVENT_NAME_UPDATED=Event {message} was updated. New name is {secondMessage}.
 EVENT_UPDATED_TITLE=Event was updated
 EVENT_UPDATED=Event {message} was updated.
 
