Commit with logger.path

--- a/core/src/main/resources/application-dev.properties
+++ b/core/src/main/resources/application-dev.properties
@@ -37,6 +37,7 @@ tokenKey=123123123123123123123123123123123123
 verifyEmailTimeHour=24
 
 # Logger
+logging.file.path=./
 logging.level.root=info
 logging.level.io.swagger.models.parameters.AbstractSerializableParameter=ERROR
 logging.level.greencity.exception.handler.CustomExceptionHandler=trace
