--- a/chart-test/valuesTest.yaml
+++ b/chart-test/valuesTest.yaml
@@ -28,6 +28,6 @@ ingress:
   cors_allow_origin: https://ita-social-projects.github.io/GreenCityClient/, http://localhost:4200, http://localhost:4200/*, https://www.testgreencity.ga/GreenCityClient/
 
   # Only when cors_allow_origin is not "*"
-  cors_allow_credentials: "false"
+  cors_allow_credentials: "true"
 
   hostname: greencity-test.testgreencity.ga
